--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -153,7 +153,10 @@
   "count-images": "{count} {count, plural, one {image} other {images}}",
   "count-more": "{count} more",
   "count-new": "{count} new",
+  "count-new-comments": "{count} new",
+  "count-new-reactions": "{count} new",
   "count-posts": "<0>{count}</0> {count, plural, one {post} other {posts}}",
+  "count-reactions": "{count} {count, plural, one {reaction} other {reactions}}",
   "count-selected": "{count} selected",
   "count-subscribers": "<0>{count}</0> {count, plural, one {subscriber} other {subscribers}}",
   "count-subscriptions": "<0>{count}</0> {count, plural, one {subscription} other {subscriptions}}",
@@ -1052,6 +1055,7 @@
   "transfer": "Transfer",
   "transfer-existing-name": "Transfer an existing name",
   "transfer-node-name": "Transfer Name From Another Node",
+  "trending": "Trending",
   "try-again": "Try again",
   "try-all-features": "Try all Moera features — <0>Create an Account</0>",
   "try-refine-search": "Try to refine your search terms or adjust filters",
