--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -153,7 +153,10 @@
   "count-images": "{count} {count, plural, one {картинка} few {картинки} other {картинок}}",
   "count-more": "Ещё {count}",
   "count-new": "{count} {count, plural, one {новый} other {новых}}",
+  "count-new-comments": "{count} {count, plural, one {новый} other {новых}}",
+  "count-new-reactions": "{count} {count, plural, one {новая} few {новые} other {новых}}",
   "count-posts": "<0>{count}</0> {count, plural, one {пост} few {поста} other {постов}}",
+  "count-reactions": "{count} {count, plural, one {реакция} few {реакции} other {реакций}}",
   "count-selected": "{count} {count, plural, one {выбран} other {выбрано}}",
   "count-subscribers": "<0>{count}</0> {count, plural, one {подписчик} few {подписчика} other {подписчиков}}",
   "count-subscriptions": "<0>{count}</0> {count, plural, one {подписка} few {подписки} other {подписок}}",
@@ -1052,6 +1055,7 @@
   "transfer": "Переместить",
   "transfer-existing-name": "Переместить существующее имя",
   "transfer-node-name": "Переместить имя с другого узла",
+  "trending": "Популярное",
   "try-again": "Попробуй еще раз",
   "try-all-features": "Откройте все возможности — <0>Создайте аккаунт</0>",
   "try-refine-search": "Попробуйте уточнить поисковый запрос или настроить фильтры",
