--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -153,7 +153,10 @@
   "count-images": "{count} {count, plural, one {зображення} few {зображення} other {зображень}}",
   "count-more": "Ще {count}",
   "count-new": "{count} {count, plural, one {новий} other {нових}}",
+  "count-new-comments": "{count} {count, plural, one {новий} few {нові} other {нових}}",
+  "count-new-reactions": "{count} {count, plural, one {нова} few {нові} other {нових}}",
   "count-posts": "<0>{count}</0> {count, plural, one {пост} few {поста} other {постів}}",
+  "count-reactions": "{count} {count, plural, one {реакція} few {реакції} other {реакцій}}",
   "count-selected": "{count} {count, plural, one {обраний} other {обрано}}",
   "count-subscribers": "<0>{count}</0> {count, plural, one {підписник} few {підписника} other {підписників}}",
   "count-subscriptions": "<0>{count}</0> {count, plural, one {підписка} few {підписки} other {підписок}}",
@@ -1052,6 +1055,7 @@
   "transfer": "Перемістити",
   "transfer-existing-name": "Перемістити існуюче ім'я",
   "transfer-node-name": "Перемістити ім'я з іншого вузла",
+  "trending": "Популярне",
   "try-again": "Спробуй ще раз",
   "try-all-features": "Спробуйте всі можливості — <0>Створіть акаунт</0>",
   "try-refine-search": "Спробуйте уточнити пошуковий запит або налаштувати фільтри",
