--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -153,7 +153,10 @@
   "count-images": "{count} {count, plural, one {obraz} few {obrazy} many {obrazów} other {obrazów}}",
   "count-more": "{count} więcej",
   "count-new": "{count} nowy",
+  "count-new-comments": "{count} {count, plural, one {nowy} few {nowe} other {nowych}}",
+  "count-new-reactions": "{count} {count, plural, one {nowa} few {nowe} other {nowych reakcji}}",
   "count-posts": "<0>{count}</0> {count, plural, one {post} few {posty} many {postów} other {postów}}",
+  "count-reactions": "{count} {count, plural, one {reakcja} few {reakcje} many {reakcji} other {reakcji}}",
   "count-selected": "{count} wybrany",
   "count-subscribers": "<0>{count}</0> {count, plural, one {subskrybent} few {subskrybenci} many {subskrybentów} other {subskrybentów}}",
   "count-subscriptions": "<0>{count}</0> {count, plural, one {subskrypcja} few {subskrypcje} many {subskrypcji} other {subskrypcji}}",
@@ -1052,6 +1055,7 @@
   "transfer": "Przenieś",
   "transfer-existing-name": "Przenieś istniejącą nazwę",
   "transfer-node-name": "Przenieś nazwę z innego węzła",
+  "trending": "Trend",
   "try-again": "Spróbuj ponownie",
   "try-all-features": "Wypróbuj wszystkie funkcje — <0>Utwórz konto</0>",
   "try-refine-search": "Spróbuj zawęzić wyszukiwane hasła lub dostosować filtry",
