Missing translation for "discussions".

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -204,6 +204,7 @@
   "disconnect": "Log Out",
   "disconnected-from-home": "You have been logged out.",
   "discussion-closed": "Discussion is closed",
+  "discussions": "Discussions",
   "display-formula": "Display formula",
   "domain": "Domain",
   "domain-already-taken": "Domain is already taken",
