--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -204,6 +204,7 @@
   "disconnect": "Wyloguj",
   "disconnected-from-home": "Zostałeś wylogowany.",
   "discussion-closed": "Dyskusja jest zamknięta",
+  "discussions": "Dyskusje",
   "display-formula": "Formuła wyodrębniona",
   "domain": "Domena",
   "domain-already-taken": "Domena jest już zajęta",
