--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -204,6 +204,7 @@
   "disconnect": "Выйти",
   "disconnected-from-home": "Вы вышли из своего аккаунта.",
   "discussion-closed": "Обсуждение закрыто",
+  "discussions": "Обсуждения",
   "display-formula": "Выделенная формула",
   "domain": "Домен",
   "domain-already-taken": "Домен уже занят",
