--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -204,6 +204,7 @@
   "disconnect": "Вийти",
   "disconnected-from-home": "Ви вийшли зі свого акаунта.",
   "discussion-closed": "Обговорення закрите",
+  "discussions": "Обговорення",
   "display-formula": "Виокремлена формула",
   "domain": "Домен",
   "domain-already-taken": "Домен вже зайнятий",
