Restructure reusable components for counters on trending posts. If numbers of total and new comments/reactions are equal, display the number only once. Simplify CSS and move trending post styles to a dedicated file.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -152,9 +152,11 @@
   "count-comments": "{count} {count, plural, one {comment} other {comments}}",
   "count-images": "{count} {count, plural, one {image} other {images}}",
   "count-more": "{count} more",
-  "count-new": "{count} new",
-  "count-new-comments": "{count} new",
-  "count-new-reactions": "{count} new",
+  "count-new-comments": "{count} {count, plural, one {new comment} other {new comments}}",
+  "count-new-on-comments": "{count} new",
+  "count-new-on-posts": "{count} new",
+  "count-new-on-reactions": "{count} new",
+  "count-new-reactions": "{count} {count, plural, one {new reaction} other {new reactions}}",
   "count-posts": "<0>{count}</0> {count, plural, one {post} other {posts}}",
   "count-reactions": "{count} {count, plural, one {reaction} other {reactions}}",
   "count-selected": "{count} selected",
