--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -152,9 +152,11 @@
   "count-comments": "{count} {count, plural, one {komentarz} few {komentarze} many {komentarzy} other {komentarzy}}",
   "count-images": "{count} {count, plural, one {obraz} few {obrazy} many {obrazów} other {obrazów}}",
   "count-more": "{count} więcej",
-  "count-new": "{count} nowy",
-  "count-new-comments": "{count} {count, plural, one {nowy} few {nowe} other {nowych}}",
-  "count-new-reactions": "{count} {count, plural, one {nowa} few {nowe} other {nowych reakcji}}",
+  "count-new-comments": "{count} {count, plural, one {nowy komentarz} few {nowe komentarze} other {nowych komentarzy}}",
+  "count-new-on-comments": "{count} {count, plural, one {nowy} few {nowe} other {nowych}}",
+  "count-new-on-posts": "{count} {count, plural, one {nowy} few {nowe} other {nowych}}",
+  "count-new-on-reactions": "{count} {count, plural, one {nowa} few {nowe} other {nowych reakcji}}",
+  "count-new-reactions": "{count} {count, plural, one {nowa reakcja} few {nowe reakcje} other {nowych reakcji}}",
   "count-posts": "<0>{count}</0> {count, plural, one {post} few {posty} many {postów} other {postów}}",
   "count-reactions": "{count} {count, plural, one {reakcja} few {reakcje} many {reakcji} other {reakcji}}",
   "count-selected": "{count} wybrany",
