--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -152,9 +152,11 @@
   "count-comments": "{count} {count, plural, one {комментарий} few {комментария} other {комментариев}}",
   "count-images": "{count} {count, plural, one {картинка} few {картинки} other {картинок}}",
   "count-more": "Ещё {count}",
-  "count-new": "{count} {count, plural, one {новый} other {новых}}",
-  "count-new-comments": "{count} {count, plural, one {новый} other {новых}}",
-  "count-new-reactions": "{count} {count, plural, one {новая} few {новые} other {новых}}",
+  "count-new-comments": "{count} {count, plural, one {новый комментарий} few {новых комментария} other {новых комментариев}}",
+  "count-new-on-comments": "{count} {count, plural, one {новый} other {новых}}",
+  "count-new-on-posts": "{count} {count, plural, one {новый} other {новых}}",
+  "count-new-on-reactions": "{count} {count, plural, one {новая} few {новые} other {новых}}",
+  "count-new-reactions": "{count} {count, plural, one {новая реакция} few {новых реакции} other {новых реакций}}",
   "count-posts": "<0>{count}</0> {count, plural, one {пост} few {поста} other {постов}}",
   "count-reactions": "{count} {count, plural, one {реакция} few {реакции} other {реакций}}",
   "count-selected": "{count} {count, plural, one {выбран} other {выбрано}}",
