--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -152,9 +152,11 @@
   "count-comments": "{count} {count, plural, one {коментар} few {коментарі} other {коментарів}}",
   "count-images": "{count} {count, plural, one {зображення} few {зображення} other {зображень}}",
   "count-more": "Ще {count}",
-  "count-new": "{count} {count, plural, one {новий} other {нових}}",
-  "count-new-comments": "{count} {count, plural, one {новий} few {нові} other {нових}}",
-  "count-new-reactions": "{count} {count, plural, one {нова} few {нові} other {нових}}",
+  "count-new-comments": "{count} {count, plural, one {новий коментар} few {нових коментарі} other {нових коментарів}}",
+  "count-new-on-comments": "{count} {count, plural, one {новий} few {нові} other {нових}}",
+  "count-new-on-posts": "{count} {count, plural, one {новий} other {нових}}",
+  "count-new-on-reactions": "{count} {count, plural, one {нова} few {нові} other {нових}}",
+  "count-new-reactions": "{count} {count, plural, one {нова реакція} few {нові реакції} other {нових реакцій}}",
   "count-posts": "<0>{count}</0> {count, plural, one {пост} few {поста} other {постів}}",
   "count-reactions": "{count} {count, plural, one {реакція} few {реакції} other {реакцій}}",
   "count-selected": "{count} {count, plural, one {обраний} other {обрано}}",
