Add ExploreBox to the News page with tabs for trending posts and discussions.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -715,6 +715,7 @@
     "postings": "Posts"
   },
   "secret-words": "Secret Words",
+  "see-all": "See all",
   "select": "Select",
   "send": "Send",
   "send-request-delete-blog": "You have sent a request to delete your blog with all the data",
