--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -715,6 +715,7 @@
     "postings": "Posty"
   },
   "secret-words": "Tajne słowa",
+  "see-all": "Zobacz wszystko",
   "select": "Wybierz",
   "send": "Wyślij",
   "send-request-delete-blog": "Wysłałeś prośbę o usunięcie swojego bloga ze wszystkimi danymi",
