--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -715,6 +715,7 @@
     "postings": "Посты"
   },
   "secret-words": "Секретные слова",
+  "see-all": "Посмотреть все",
   "select": "Выбрать",
   "send": "Отправить",
   "send-request-delete-blog": "Вы отправили запрос на удаление своего блога со всей информацией",
