--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -715,6 +715,7 @@
     "postings": "Пости"
   },
   "secret-words": "Секретні слова",
+  "see-all": "Переглянути всі",
   "select": "Обрати",
   "send": "Надіслати",
   "send-request-delete-blog": "Ви надіслали запит на видалення свого блогу з усіма даними",
