Change wording of the "Edit Profile" menu item; adjust width of the profile settings sheet. Remove green checkmarks in the profile settings sheet.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -250,6 +250,7 @@
   "edit-image": "Edit Image",
   "edit-link-preview": "Edit link preview",
   "edit-post-title": "Edit Post",
+  "edit-profile": "Edit profile",
   "e-mail": "E-mail",
   "email": "E-mail",
   "email-address-confirmation": "E-mail address confirmation",
