--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -250,6 +250,7 @@
   "edit-image": "Edytuj obraz",
   "edit-link-preview": "Edytuj podgląd linku",
   "edit-post-title": "Edytuj post",
+  "edit-profile": "Edytuj profil",
   "e-mail": "E-mail",
   "email": "E-mail",
   "email-address-confirmation": "Potwierdzenie adresu e-mail",
