--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -250,6 +250,7 @@
   "edit-image": "Редактировать картинку",
   "edit-link-preview": "Редактировать предпросмотр ссылки",
   "edit-post-title": "Редактировать пост",
+  "edit-profile": "Редактировать профиль",
   "e-mail": "E-mail",
   "email": "Электронная почта",
   "email-address-confirmation": "Подтверждение адреса электронной почты",
