--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -250,6 +250,7 @@
   "edit-image": "Редагувати картинку",
   "edit-link-preview": "Редагувати перегляд посилання",
   "edit-post-title": "Редагувати пост",
+  "edit-profile": "Редагувати профіль",
   "e-mail": "E-mail",
   "email": "Електронна пошта",
   "email-address-confirmation": "Підтвердження електронної адреси",
