Notify mobile users of unseen discussions via Explore badge
Show a dot on the Explore button to indicate discussions the user hasn’t participated in.
Trigger no earlier than one day after the last visit to Explore.
Only for discussions the user is not subscribed to, not in their feed, and with new comments in the past day.
When tapping Explore with the badge, navigate directly to the Discussions page.

--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -777,6 +777,7 @@
         "comment_smileys_enabled": "Zamień proste emotikony na emoji",
         "comment_submit-key": "Wyślij komentarz po naciśnięciu klawisza",
         "entry_gallery_loop": "Pętla widoku galerii",
+        "explore_discussions_notify": "Powiadom o nowych aktywnych dyskusjach",
         "feed_width": "Szerokość kanału (w pikselach)",
         "friends_subscribe-on-add": "Gdy dodaesz znajomego, którego nie subskrybujesz",
         "friends_subscribe-on-add-items": {
