--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -777,6 +777,7 @@
         "comment_smileys_enabled": "Replace simple smileys with emojis",
         "comment_submit-key": "Send comment when pressed",
         "entry_gallery_loop": "Loop gallery view",
+        "explore_discussions_notify": "Notify about new active discussions ",
         "feed_width": "Feed width (in pixels)",
         "friends_subscribe-on-add": "When adding a friend you are not subscribed to",
         "friends_subscribe-on-add-items": {
