--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -48,6 +48,7 @@
   "avatar-too-small": "Rozmiar obrazka awatara powinien wynosić co najmniej 100x100 pikseli.",
   "back": "Cofnij",
   "back-complaints": "Powrót do listy skarg",
+  "back-explore": "Powrót do Odkrywaj",
   "back-news": "Powrót do Aktualności",
   "back-post": "Powrót do postu",
   "back-posts": "Powrót do postów {name}",
