--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -48,6 +48,7 @@
   "avatar-too-small": "Размер картинки для аватарки должен быть хотя бы 100x100 пикселов",
   "back": "Назад",
   "back-complaints": "Назад к списку жалоб",
+  "back-explore": "Назад к Обзору",
   "back-news": "Назад к Новостям",
   "back-post": "Назад к посту",
   "back-posts": "Назад к постам {name}",
