--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -48,6 +48,7 @@
   "avatar-too-small": "Розмір картинки для аватара повинен бути хоча б 100x100 пікселів",
   "back": "Назад",
   "back-complaints": "Назад до списку скарг",
+  "back-explore": "Назад до Огляду",
   "back-news": "Назад до Новин",
   "back-post": "Назад до поста",
   "back-posts": "Назад до постів {name}",
