--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -779,6 +779,7 @@
         "comment_submit-key": "Wyślij komentarz po naciśnięciu klawisza",
         "entry_gallery_loop": "Pętla widoku galerii",
         "explore_discussions_notify": "Powiadom o nowych aktywnych dyskusjach",
+        "explore_news_show": "Pokaż Trend na stronie Aktualności",
         "feed_width": "Szerokość kanału (w pikselach)",
         "friends_subscribe-on-add": "Gdy dodaesz znajomego, którego nie subskrybujesz",
         "friends_subscribe-on-add-items": {
