--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -779,6 +779,7 @@
         "comment_submit-key": "Надсилати коментар за натисканням",
         "entry_gallery_loop": "Зациклювати перегляд галереї",
         "explore_discussions_notify": "Сповіщати про нові активні дискусії",
+        "explore_news_show": "Показувати Популярне на сторінці Новини",
         "feed_width": "Ширина стрічки (у пікселах)",
         "friends_subscribe-on-add": "При додаванні друга, на якого ви не підписані",
         "friends_subscribe-on-add-items": {
