Display titles "Insert Images" and "Edit Inserted Image" in RichTextImageDialog when using it for images inserted into the text.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -249,6 +249,7 @@
   "edit-comment": "Edit Comment",
   "edit-donation": "Edit Donation",
   "edit-image": "Edit Image",
+  "edit-inserted-image": "Edit inserted image",
   "edit-link-preview": "Edit link preview",
   "edit-post-title": "Edit Post",
   "edit-profile": "Edit profile",
@@ -350,6 +351,7 @@
   "inline-formula": "Inline formula",
   "in-newsfeed": "In the newsfeed",
   "in-post": "In the post",
+  "insert-images": "Insert images",
   "insert-into-text": "Insert into text",
   "insert-link": "Insert a link",
   "insert-mention": "Insert a mention",
