--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -249,6 +249,7 @@
   "edit-comment": "Edytuj komentarz",
   "edit-donation": "Edytuj darowiznę",
   "edit-image": "Edytuj obraz",
+  "edit-inserted-image": "Edytuj wstawiony obraz",
   "edit-link-preview": "Edytuj podgląd linku",
   "edit-post-title": "Edytuj post",
   "edit-profile": "Edytuj profil",
@@ -350,6 +351,7 @@
   "inline-formula": "Formuła w tekście",
   "in-newsfeed": "W kanale wiadomości",
   "in-post": "W poście",
+  "insert-images": "Wstaw obrazy",
   "insert-into-text": "Wstaw do tekstu",
   "insert-link": "Wstaw link",
   "insert-mention": "Wstaw wzmiankę",
