--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -249,6 +249,7 @@
   "edit-comment": "Редактировать комментарий",
   "edit-donation": "Редактировать донат",
   "edit-image": "Редактировать картинку",
+  "edit-inserted-image": "Редактировать вставленную картинку",
   "edit-link-preview": "Редактировать предпросмотр ссылки",
   "edit-post-title": "Редактировать пост",
   "edit-profile": "Редактировать профиль",
@@ -350,6 +351,7 @@
   "inline-formula": "Встроенная формула",
   "in-newsfeed": "В ленте новостей",
   "in-post": "В посте",
+  "insert-images": "Вставить картинки",
   "insert-into-text": "Вставить в текст",
   "insert-link": "Вставить ссылку",
   "insert-mention": "Вставить упоминание",
