--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -249,6 +249,7 @@
   "edit-comment": "Редагувати коментар",
   "edit-donation": "Редагувати донат",
   "edit-image": "Редагувати картинку",
+  "edit-inserted-image": "Редагувати вставлене зображення",
   "edit-link-preview": "Редагувати перегляд посилання",
   "edit-post-title": "Редагувати пост",
   "edit-profile": "Редагувати профіль",
@@ -350,6 +351,7 @@
   "inline-formula": "Вбудована формула",
   "in-newsfeed": "У стрічці новин",
   "in-post": "У пості",
+  "insert-images": "Вставити картинки",
   "insert-into-text": "Вставити в текст",
   "insert-link": "Вставити посилання",
   "insert-mention": "Вставити згадку",
