--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -816,7 +816,7 @@
           "latest": "Najnowszy post"
         },
         "posting_body_font-magnitude": "Rozmiar czcionki",
-        "posting_body_font-magnitude_mobile": "Rozmiar czcionki posta",
+        "posting_body_font-magnitude_mobile": "Rozmiar czcionki",
         "posting_comments_addition_default": "Domyślnie zezwól na komentowanie",
         "posting_comments_hide_default": "Domyślnie ukrywaj komentarze automatycznie",
         "posting_comments_visibility_default": "Domyślna widoczność komentarzy",
