Add confirmation dialog for loading unpublished comment drafts. Without this dialog, users unaware of drafts may be confused seeing the content of the editor being different from the published comment.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -101,6 +101,7 @@
   "collapse": "Collapse ↑",
   "comment-button": "Comment",
   "comment-edited-conflict": "The comment was edited by somebody.",
+  "comment-has-draft-want-load": "This comment has an unpublished draft. Would you like to load it?",
   "commenting-allowed-to": "Commenting allowed to",
   "comment-not-found": "Comment not found",
   "comment-optional": "Comment (optional)",
