--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -530,6 +530,7 @@
   "not-subscribed-friend": "Вы еще не подписаны на своего друга. Хотите подписаться?",
   "not-valid-e-mail": "Недопустимый адрес e-mail",
   "numbered-list": "Нумерованный список",
+  "of": "{part} из {total}",
   "ok": "OK",
   "only-new": "Только новые",
   "open": "Открыть",
